--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,5 @@ body,
 html {
   margin: 0;
   width: 100%;
+  background-color: white;
 }
